@@ -1,0 +1,60 @@
+// { dg-options "-std=gnu++11" }
+
+// Copyright (C) 2014 Free Software Foundation, Inc.
+//
+// This file is part of the GNU ISO C++ Library.  This library is free
+// software; you can redistribute it and/or modify it under the
+// terms of the GNU General Public License as published by the
+// Free Software Foundation; either version 3, or (at your option)
+// any later version.
+
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License along
+// with this library; see the file COPYING3.  If not see
+// <http://www.gnu.org/licenses/>.
+
+#include <exception>
+#include <testsuite_hooks.h>
+
+struct E { E(int) {} };
+
+void
+test01()
+{
+  bool caught = false;
+  try
+  {
+    std::throw_with_nested(E(42));
+  }
+  catch (const std::nested_exception& e)
+  {
+    caught = true;
+  }
+  VERIFY(caught);
+}
+
+void
+test02()
+{
+  bool caught = false;
+  try
+  {
+    std::throw_with_nested(42);
+  }
+  catch (int)
+  {
+    caught = true;
+  }
+  VERIFY(caught);
+}
+
+int
+main()
+{
+  test01();
+  test02();
+}
